# FlexCloud

./: .gitignore  CMakeLists.txt  CPPLINT.cfg  Dockerfile  README.md  package.xml  pyproject.toml
.github/workflows/: cpplint.yml  docker.yml  flake8.yml  pypi.yml  testpypi.yml
analysis/: plot_kitti_poses.py  plot_traj_matching.py  utility.py
config/: georeferencing.yaml  keyframe_interpolation.yaml  pcd_georef.param.yaml  pcd_georef.yaml  rviz_conf_pcd_georef.rviz  select_keyframes.yaml
doc/: alignment.md  analysis.md
docker/: Dockerfile  build_docker.sh  run_docker.sh
include/FlexCloud/: analysis.hpp  file_io.hpp  messages.hpp  param_pcd_georef.hpp  pcd_georef.hpp  transform.hpp  triangulation.hpp  umeyama.hpp  visualization.hpp
include/flexcloud/: analysis.hpp  file_io.hpp  georeferencing.hpp  keyframe_interpolation.hpp  messages.hpp  param_pcd_georef.hpp  pcd_georef.hpp  point_types.hpp  rosbag_io.hpp  rosbag_reader.hpp  transform.hpp  triangulation.hpp  umeyama.hpp  utility.hpp  visualization.hpp
include/flexcloud/cli/: cli_config.hpp
include/tam_pcd_georeferencing/: analysis.hpp  file_io.hpp  messages.hpp  param_pcd_georef.hpp  pcd_georef.hpp  transform.hpp  triangulation.hpp  umeyama.hpp  utility.hpp  visualization.hpp
launch/: pcd_georef.launch.py
package/: bake_libs.sh  wrapper.py
src/: analysis.cpp  file_io.cpp  georeferencing.cpp  keyframe_interpolation.cpp  messages.cpp  pcd_georef.cpp  rosbag_io.cpp  select_keyframes.cpp  transform.cpp  visualization.cpp
test/: poseData.txt  poses_keyframes.txt  poses_map.txt  positions_interpolated.txt
