<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>flexcloud</name>
  <version>0.0.0</version>
  <description>Package to georeference a point cloud map with GNSS data based on rubber-sheeting</description>
  <maintainer email="maxi.leitenstern@tum.de">Maximilian Leitenstern</maintainer>
  <license>GPL-3.0 license</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>pcl_msgs</depend>
  <depend>pcl_conversions</depend>
  <depend>rclcpp</depend>
  <depend>GeographicLib</depend>
  <depend>CGAL</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
